Corrected forth homework

--- a/DZ-4.ipynb
+++ b/DZ-4.ipynb
@@ -19,8 +19,8 @@
    "outputs": [],
    "source": [
     "# дисперсия\n",
-    "def dindDispersion(a, b):\n",
-    "    return sqrt(b - a) / 12"
+    "def findDispersion(a, b):\n",
+    "    return (b - a)**2 / 12"
    ]
   },
   {
@@ -63,13 +63,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.041241452319315\n"
+      "30000.0\n"
      ]
     }
    ],
    "source": [
     "# дисперсия:\n",
-    "print(dindDispersion(200, 800))"
+    "print(findDispersion(200, 800))"
    ]
   },
   {
