--- a/DZ-5.ipynb
+++ b/DZ-5.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "36690f42",
    "metadata": {},
    "outputs": [],
    "source": [
     "from math import sqrt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -111,23 +112,35 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6def340d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = 1.96"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "cf10e443",
+   "id": "45ae9c87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.42766809560686203"
+       "6.590000000000001"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu = x.mean()\n",
+    "mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8554b238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2032222222222223"
       ]
      },
      "execution_count": 6,
@@ -136,20 +149,20 @@
     }
    ],
    "source": [
-    "sigma = x.std()\n",
-    "sigma"
+    "variance = x.var(ddof=1)  # несмещённая дисперсия\n",
+    "variance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3774e93a",
+   "id": "46431ab6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2650714318820495"
+       "0.4508017549014448"
       ]
      },
      "execution_count": 7,
@@ -158,13 +171,45 @@
     }
    ],
    "source": [
-    "delta = t * sigma / sqrt(x.size)\n",
-    "delta"
+    "sig = x.std(ddof=1) # средне-квабдратичное отклонение\n",
+    "sig"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "6def340d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = 2.262"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3774e93a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32246174408757394"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "delta = t * sig / sqrt(x.size)\n",
+    "delta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ad138c3d",
    "metadata": {},
    "outputs": [
@@ -172,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Доверительный интервал: (6.32; 6.86)\n"
+      "Доверительный интервал: (6.27; 6.91)\n"
      ]
     }
    ],
@@ -199,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ae3b5d8c",
    "metadata": {},
    "outputs": [
@@ -209,7 +254,7 @@
        "2.5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "75c23581",
    "metadata": {},
    "outputs": [
@@ -231,7 +276,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "ce959a77",
    "metadata": {},
    "outputs": [
@@ -277,7 +322,7 @@
        "array([202, 203, 199, 197, 195, 201, 200, 204, 194, 190])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ffbfe15a",
    "metadata": {},
    "outputs": [
@@ -299,7 +344,7 @@
        "10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,29 +356,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
+   "id": "99752571",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.453463071962462"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.std(ddof=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "6d489edc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.297627709554282"
+       "-1.0651074037450896"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "T_nab = ((200 - a.mean()) / sqrt(a.std())) * (n)\n",
+    "T_nab = (a.mean() - 200) * sqrt(n) / a.std(ddof=1)\n",
     "T_nab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "43d01837",
    "metadata": {},
    "outputs": [
@@ -343,15 +409,37 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Таблица распределения Стьюдента (t - распределения) 99% cо степенью свободы 9 (n - 1):\n",
-    "T_tab = 2.821\n",
+    "T_tab = -3.25\n",
     "T_tab < T_nab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4dec8251",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-1.0651074037450896, pvalue=0.31456660352472854)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# проверка\n",
+    "stats.ttest_1samp(a, 200)"
    ]
   },
   {
@@ -359,7 +447,7 @@
    "id": "d9199da6",
    "metadata": {},
    "source": [
-    "Ответ: утверждение продавца ложно"
+    "Ответ: утверждение продавца верно"
    ]
   }
  ],
